kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sseservertest
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    alb.networking.azure.io/alb-id: <gateway-resource-id> # TODO: Replace with the Azure resource ID of the Application Gateway for Containers
  name: gateway
  namespace: sseservertest
spec:
  addresses:
    - type: alb.networking.azure.io/alb-frontend
      value: fe
  gatewayClassName: azure-alb-external
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      # hostname: <hostname> # Probably optional
      name: https-listener-backbone
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tlscert
        mode: Terminate
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sseservertest
  labels:
    app: sseservertest
spec:
  selector:
    matchLabels:
      app: sseservertest
  template:
    metadata:
      labels:
        app: sseservertest
    spec:
      containers:
        - name: sseservertest
          image: tnotheis/sseserver-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: sseservertest
  labels:
    app: sseservertest
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: sseservertest
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sseservertest
spec:
  # hostnames: # Probably optional
  # - <hostname> # Probably optional
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  rules:
    - backendRefs:
        - kind: Service
          name: sseservertest
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /sse
